--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "react-native": "^0.82.1"
   },
   "devDependencies": {
-    "@types/react": "^19.2.2"
-  }
+    "@types/react": "^19.2.2",
+    "typescript": "~5.9.2"
+  },
+  "main": "expo-router/entry"
+
+
 }
