--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~54.0.19",
     "expo-calendar": "~15.0.7",
     "expo-camera": "~17.0.9",
+    "expo-charts": "^1.0.2",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.9",
     "expo-font": "~14.0.9",
